--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- <img class="main image"src="img/pikachu.jpg"alt="pika"> -->
     <div class="main-box">
     <h1 class="main-text">
-        Crunchyroll is for the strong
+        Ads before the Video are Evil
     </h1>
     </div>
 </main>
